--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Ustbtest</string>
+    <string name="connect_button_string">Connect</string>
+    <string name="info_button_string">Info</string>
 </resources>
